bugfix: do not extract filenames from subdirectories (multifile-input)